# listprojects

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  config.toml  config.toml.example  flake.nix  go.mod  go.sum  main.go  mise.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: build-release.yml  release-plz.yml
listprojects/: cli.py
openspec/changes/archive/2026-03-18-frecency-sorting/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-18-frecency-sorting/specs/frecency-scoring/: spec.md
openspec/changes/archive/2026-03-18-frecency-sorting/specs/sorted-display/: spec.md
openspec/specs/frecency-scoring/: spec.md
openspec/specs/sorted-display/: spec.md
projectpath/: path.go
src/: cache.rs  disk_cache.rs  main.rs
tmux/: tmux.go
