[package]
name = "listprojects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
crossbeam-channel = "0.5.1"
dirs = "3.0.2"
eyre = "0.6.5"
ignore = "0.4.18"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.78"
skim = "0.9.4"
structopt = "0.3.22"
tmux_interface = "0.2.1"
toml = "0.5.8"
tracing = { version = "0.1.26", features = ["attributes"] }
tracing-subscriber = { version = "0.2.20", features = ["fmt", "env-filter"] }

[[bin]]
name = "project"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.3.0"
