[package]
name = "listprojects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
color-eyre = "0.6.1"
env_logger = "0.9.0"
eyre = "0.6.7"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
skim = "0.9.4"
