[package]
name = "listprojects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
crossbeam-channel = "0.5.4"
dirs = "4.0.0"
env_logger = "0.9.0"
eyre = "0.6.7"
ignore = "0.4.18"
log = "0.4.16"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
shellexpand = "2.1.0"
skim = "0.9.4"
toml = "0.5.8"
